    - Removed migrations for versions before 0.18 since the game doesn't load those saves anymore
    - Updated to a newer version of flib (v0.6.0)
  Bugfixes:
    - Fixed that changing the limit on a machine would reset the 'hard limit'-switch
    - Finally found a workaround for the issue that clicks would go 'through' the main dialog if a modal one was open

---------------------------------------------------------------------------------------------------
Version: 1.0.13
Date: 16. 11. 2020
  Bugfixes:
    - Fixed a crash with Space Exploration

---------------------------------------------------------------------------------------------------
Version: 1.0.12
Date: 16. 11. 2020
  Bugfixes:
    - Added a couple missing locale strings
    - Fixed an issue where the beacon total would not be shown when editing a beacon
    - Fixed an issue where the total machine count for a subfloor would be incorrect if that subfloor had itself a subfloor

---------------------------------------------------------------------------------------------------
Version: 1.0.11
Date: 09. 10. 2020
  Bugfixes:
    - Fixed a crash when trying to load a map with the 'Nauvis Melange' mod

---------------------------------------------------------------------------------------------------
Version: 1.0.10
Date: 05. 10. 2020
  Features:
    - Added a secondary default module that will try to insert itself if the primary one is not compatible with the new machine/recipe (thanks scottmsul!)

---------------------------------------------------------------------------------------------------
Version: 1.0.9
Date: 01. 10. 2020
  Bugfixes:
    - Fixed a crash related to the beacon dialog in certain modded situations

---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 28. 09. 2020
  Bugfixes:
    - Fixed that the preference for the default beacon amount would not be saved
