@@ -20,6 +20,7 @@ Date: 00. 00. 0000
   Bugfixes:
     - Fixed that changing the limit on a machine would reset the 'hard limit'-switch
     - Finally found a workaround for the issue that clicks would go 'through' the main dialog if a modal one was open
+    - Fixed the beacon tooltip in preferences displaying incorrect energy consumption values
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.13
